--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
     <h1>我叫赖泓澄</h1>
 <p>我的学号是1900209013</p>
-    <script src="jquery.min.js"></script>
+    <script src="jquery-3.4.1.js"></script>
 <script src="jssor.slider.min.js"></script>
 <script>
     jQuery(document).ready(function ($) {
