--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        
+    </head>
 <body>
     <h1>我叫赖泓澄</h1>
 <p>我的学号是1900209013</p>
@@ -10,7 +13,8 @@
         var jssor1_slider = new $JssorSlider$("jssor_1", options);
     });
 </script>
-<div id="jssor_1" style="position:relative;top:0px;left:0px;width:980px;height:380px;overflow:hidden;">
+<div id="jssor_1" style="    position:relative;top:0px;left:0px;width:980px;height:380px;overflow:hidden;
+">
     <div data-u="slides" style="position:absolute;top:0px;left:0px;width:980px;height:380px;overflow:hidden;">
         <div><img data-u="image" src="1(1).jpg" /></div>
         <div><img data-u="image" src="2(1).jpg" /></div>
