--- a/text.html
+++ b/text.html
@@ -1,17 +1,34 @@
 <html>
     <bady>
+        <h1 id="header">hello</h1>
         <script src="./stat.js"></script>
         <script src='./underscore.js'></script>
+        <script src='./jquery-3.4.1.js'></script>
         <script>
+
+$(function() {
+    $("#header").text($("#header").text()+"!!!!!!!!!!!!")
+})
+
+
+/*
+console.log(window.location.href="http://www.baidu.com")
+
+*/
+
+var x=document.getElementById("header")
+console.log(x)
 var value=11;
-var initbalue=22;
+var initbalue=22                     //parseInt("请输入初始值",22);
 function addition(){
     var value =initbalue;
+    var count=0;
     return function add(x){
         value=value+x;
-        if(value==99){
+        count++;
+        if(count==2){
     console.log(value); 
-    }   
+        }
     }
     
 } 
